[tool.poetry]
name = "apitta6_python_toy"
version = "0.1.0"
description = "Toy package for python"
authors = ["Andres Pitta <apitta6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
